syntax = "proto3";
package pb;

enum ChannelType{
    Empty = 0;
    Subscribe = 1;
    P2P = 2;
}

message CreateChannelMsg{
    string Name = 1;
    ChannelType Type = 2;
}

message PublishMsg{
    string Name = 1;
    bytes Content = 2;
}

message SubscribeMsg{
    string Name = 1;
    int64 Subscriber = 2;
}

message ControlMsg{
    string Content = 1;
}

service MsgPubService{
    rpc Msg (PublishMsg) returns (ControlMsg);
}
service MsgSubService{
    rpc Msg (SubscribeMsg) returns (ControlMsg);
}
service MsgCreateService{
    rpc Msg (CreateChannelMsg) returns (ControlMsg);
}